--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^1.1",
         "owen-it/laravel-auditing": "^13.6",
-        "phpoffice/phpspreadsheet": "^2.0"
+        "phpoffice/phpspreadsheet": "^2.0",
+        "vonage/vonage-laravel": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
